# rtim

./: .gitignore  README.md
development/phase01/: zoa.py
development/phase02/pre/cpp/: CMakeLists.txt  generate_test_surface.cpp
development/phase02/pre/freecad/: freeform_generator.py
development/phase02/pre/py/: freeform_generator.py  freeform_surface.stl  requirements.txt  simple_tetrahedron.step  surface_analysis.py  visible_freeform_surface.step
